# b-ogl-engine

./: .gitignore  Application.cpp  Application.h  CMakeLists.txt  defs.h  main.cpp
base/game/: Core.cpp  Core.h  Logger.h  WindowHandler.cpp
base/gl/: GlHelper.h  Shader.cpp  Shader.h
base/overlay/: ImGuiOverlay.cpp  ImGuiOverlay.h
base/struct/: AABB.h  Extent2D.h  IntersectionRecord.h  Ray.h
base/window/: WindowManager.h
base/window/glfw/: GLFWWindowManager.cpp  GLFWWindowManager.h
cmake/modules/: Findglfw.cmake
objects/: Camera.cpp  Camera.h
objects/model/: Bezier.cpp  Bezier.h  BezierMesh.cpp  BezierMesh.h  Cubemap.cpp  Cubemap.h  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  ModelHandler.cpp  Texture.h  Vertex.h
visuals/shaders/: debug.vert  scene.frag  scene.vert  simpleDiffuse.frag  simpleDiffuse.vert  simpleSampler.frag  simpleSampler.vert  singleColor.frag  singleColor.vert
